--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -21,7 +21,8 @@ body {
 
 .friend-search input {
   width: 100%;
-  padding: 5px 8px;
+  padding: 6px 8px;
+  border: 1px solid #e5e6e7;
 }
 
 .left-view-container {
@@ -35,7 +36,7 @@ body {
 }
 
 .friend-list-container {
-  height: 96vh;
+  height: calc(100vh - 70px);
   overflow-y: scroll;
 }
 
@@ -45,13 +46,17 @@ body {
   border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
+.friend-container:first-of-type {
+  background-color: #eee;
+}
+
 .friend-image-wrapper {
   margin-right: 10px; 
 }
 
 .friend-image {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 
@@ -72,6 +77,7 @@ body {
 
 .friend-right-view {
   width: 100%;
+  padding: 8px 0px;
 }
 
 .message-form-wrapper {
@@ -90,6 +96,7 @@ body {
 .message-form input {
   padding: 8px 10px;
   width: 100%;
+  border: 1px solid #e5e6e7;
 }
 
 .from-me {
@@ -98,4 +105,54 @@ body {
 
 .messages {
   padding: 10px;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+}
+
+.cross {
+  cursor: pointer;
+}
+
+.header {
+  display: flex;
+  padding: 13px 10px 14px;
+  background: #eee;
+}
+
+.login-container {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%,-50%,0);
+}
+
+.login-form {
+  padding: 30px 25px;
+  border: 1px solid #c3c3c3;
+  border-radius: 2px;
+  box-shadow: 0 0px 8px 0 rgba(0,0,0,.5);
+}
+
+select, input {
+  border-radius: 2px;
+}
+
+.select-username {
+  padding: 8px 8px;
+  background-color: inherit;
+  border: 1px solid #e5e6e7;
+}
+
+.login-submit {
+  display: block;
+  margin-top: 20px;
+  padding: 6px 8px;
+  border: 1px solid #31b161;
+  background-color: #20c05c;
+  color: #fff;
+  cursor: pointer;
 }
