--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -4,9 +4,8 @@
 
 body {
   width: 100%;
-  height: 100%;
   margin: 0px;
-  height: 0px;
+  padding: 0px;
 }
 
 .container {
@@ -37,7 +36,7 @@ body {
 
 .friend-list-container {
   height: calc(100vh - 70px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .friend-container {
@@ -107,6 +106,10 @@ body {
   padding: 10px;
 }
 
+.message {
+  padding: 5px 0px;
+}
+
 .error-message {
   color: red;
   font-size: 12px;
@@ -120,6 +123,7 @@ body {
   display: flex;
   padding: 13px 10px 14px;
   background: #eee;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 .login-container {
